change 'gk23' to 'codergate'.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gk23</name>
+	<name>codergate</name>
 	<comment></comment>
 	<projects>
 	</projects>
