--- a/config/mongrel.yml
+++ b/config/mongrel.yml
@@ -1,7 +1,7 @@
 ---
 :host: 0.0.0.0
 :port: 3000
-:cwd: E:/ror-projects/gk23
+:cwd: E:/ror-projects/codergate
 :log_file: log/mongrel.log
 :pid_file: log/mongrel.pid
 :environment: development
