--- a/db/migrate/dev_data/user_course_ships.yml
+++ b/db/migrate/dev_data/user_course_ships.yml
@@ -1,15 +1,19 @@
 user_course1:
     user_id: 206669143
     course_id: 1
+    progress_completed: 1
 
 user_course2:
     user_id: 206669143
     course_id: 2
+    progress_completed: 0.8
 
 user_course3:
     user_id: 358143215
     course_id: 1
+    progress_completed: 1
 
 user_course4:
     user_id: 358143215
     course_id: 2
+    progress_completed: 0.8
